knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/Pro_Forma_Model__c.object-meta.xml
<CustomObject>
    <label>Pro Forma Model</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pro Forma Models</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>