knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/fields/Approval_Tier__c.field-meta.xml
<CustomField>
    <fullName>Approval_Tier__c</fullName>
    <formula>IF(
    AND(
        NOT(Current_Client__c),
        Encounter_Level_Data__c,
        NOT(Med_Mal_Limits_Unique__c),
        Gross_Margin__c &lt;= 2500000,
        Gross_Margin_Percent__c &gt;= 0.10,
        At_Risk_of_Margin__c &lt;= 0.05,
        NOT(New_State__c),
        TEXT(Financial_Contract_Type__c) = &quot;Guaranteed Management Fee ($)&quot;,
        Compensation_Buffer__c &gt;= 0.05,
        NOT(Physician_Comp_Above_Below_State_Avg__c)
    ),
    &quot;Offline Approval&quot;,
    &quot;DAM Approval&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Tier</label>
    <type>Text</type>
</CustomField>