knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/fields/Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Approval_Type__c</fullName>
    <label>Approval Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>