knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/fields/At_Risk_of_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_of_Subsidy__c</fullName>
    <label>At Risk % of Subsidy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>