knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/fields/Collection_Agency__c.field-meta.xml
<CustomField>
    <fullName>Collection_Agency__c</fullName>
    <label>Collection Agency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>