knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/fields/Compensation_Buffer__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Buffer__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Compensation Buffer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>