knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/fields/Draft_Date__c.field-meta.xml
<CustomField>
    <fullName>Draft_Date__c</fullName>
    <label>Draft Date</label>
    <type>Date</type>
</CustomField>