knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/fields/EM_EPC__c.field-meta.xml
<CustomField>
    <fullName>EM_EPC__c</fullName>
    <label>EM EPC %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>