knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/fields/FFS_Volume__c.field-meta.xml
<CustomField>
    <fullName>FFS_Volume__c</fullName>
    <label>FFS Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>