knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/fields/Financial_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Financial_Contract_Type__c</fullName>
    <label>Financial Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Case Rate</fullName>
            </value>
            <value>
                <fullName>Collections Floor</fullName>
            </value>
            <value>
                <fullName>Cost +</fullName>
            </value>
            <value>
                <fullName>Guaranteed Management Fee ($)</fullName>
            </value>
            <value>
                <fullName>Guaranteed Management Fee (%)</fullName>
            </value>
            <value>
                <fullName>Flat Subsidy</fullName>
            </value>
            <value>
                <fullName>Flat Subsidy w/ Leaseback</fullName>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>LifePoint Agreement</fullName>
            </value>
            <value>
                <fullName>LifePoint Agreement Carve Out</fullName>
            </value>
            <value>
                <fullName>MSA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>