knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/fields/In_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>In_Approval_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Approval Process</label>
    <type>Checkbox</type>
</CustomField>