knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/fields/MD_Director_Pay__c.field-meta.xml
<CustomField>
    <fullName>MD_Director_Pay__c</fullName>
    <label>MD Director Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>