knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/fields/MD_Performance__c.field-meta.xml
<CustomField>
    <fullName>MD_Performance__c</fullName>
    <label>MD Performance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>