knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/fields/New_State__c.field-meta.xml
<CustomField>
    <fullName>New_State__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New State</label>
    <type>Checkbox</type>
</CustomField>