knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/fields/NPPA_Base__c.field-meta.xml
<CustomField>
    <fullName>NPPA_Base__c</fullName>
    <label>NPPA Base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>