knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/fields/NPPA_Hrs_Year__c.field-meta.xml
<CustomField>
    <fullName>NPPA_Hrs_Year__c</fullName>
    <label>NPPA Hrs/Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>