knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/fields/Physician_Comp_Above_Below_State_Avg__c.field-meta.xml
<CustomField>
    <fullName>Physician_Comp_Above_Below_State_Avg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Physician Comp (Above Below State Avg)</label>
    <type>Checkbox</type>
</CustomField>