knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/fields/RCS_Allocation__c.field-meta.xml
<CustomField>
    <fullName>RCS_Allocation__c</fullName>
    <label>RCS Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>