knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/fields/Remediation_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Revenue__c</fullName>
    <label>Remediation Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>