knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/fields/RVU_per_pt__c.field-meta.xml
<CustomField>
    <fullName>RVU_per_pt__c</fullName>
    <label>RVU per pt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>