knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/fields/Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>Sales_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pro_Forma_Models</relationshipName>
    <type>Lookup</type>
</CustomField>