knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/fields/Scribe_Hrs_Day__c.field-meta.xml
<CustomField>
    <fullName>Scribe_Hrs_Day__c</fullName>
    <label>Scribe Hrs/Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>