knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/fields/Staffing_Expense__c.field-meta.xml
<CustomField>
    <fullName>Staffing_Expense__c</fullName>
    <label>Staffing Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>