knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/fields/Subsidy_Adj__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Adj__c</fullName>
    <label>Subsidy Adj</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>