knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/fields/Total_Direct_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Direct_Expenses__c</fullName>
    <label>Total Direct Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>