knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Pro_Forma_Model__c/fields/Total_RVUs__c.field-meta.xml
<CustomField>
    <fullName>Total_RVUs__c</fullName>
    <label>Total RVUs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>